finishing end point auth
