# app/model/auth.go
@@ -11,3 +11,16 @@ type JwtCustomClaims struct {
 	Permissions []string  `json:"permissions"`
 	jwt.RegisteredClaims
 }
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token" binding:"required"`
+}
+
+type RefreshTokenResponse struct {
+	Token        string `json:"token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type LogoutRequest struct {
+	Token string `json:"token"` 
+}
